# hipoteka

./: Cargo.toml
data/koszty/: pawia.json  uznanskiego.json  zycie.json
data/kredyt/: alior_bank.json  alior_bank_25.json  alior_bank_nadplata.json  alior_bank_nadplata_new.json  mbank.json  mbank_nadplata.json  mbank_nadplata_new.json  millenium.json  pekao_sa.json  pekao_sa_25 copy.json  pekao_sa_25.json  pekao_sa_25_copy.json  pekao_sa_ubezpiecznie.json  santander.json  santander_25.json  santander_nadplata.json  santander_nadplata_new.json
src/: kalkulator.rs  koszt.rs  koszty.rs  kredyt.rs  main.rs  mapa_rat.rs  nadplaty.rs
